Changes for 1.6
* Allowed loading of transports in Sea Zones where all enemies just became hostile this turn due to politics. (veqryn)

* Fixed issue with loading transports in the same sea zone where a transport was previously unload in a previous phase. (veqryn)

* Fixed issue with having multiple support attachment affecting the same group of units. The order of preference is now: highest bonus support first, then lowest number of supported types to highest number of types. (veqryn)

* Created new techAbilityAttachment option, "bombingBonus", which will add additional damage after all dice are rolled, per unit. (veqryn)

* Created new techAbilityAttachment option, "defenseRollsBonus", which adds additional defense rolls. (veqryn)

* Created new techAbilityAttachment option, "attackRollsBonus", which adds additional attack rolls. (veqryn)

* Created new UnitAttachment option, "chooseBestRoll", which controls whether we select the best dice or use all the dice rolled, when there is more than one die rolled. (veqryn)

* Created new UnitAttachment option, "defenseRolls", which controls the number of defense rolls a unit has, so long as their defense is greater than zero. (veqryn)

* Created new UnitAttachment option, "attackRolls", which controls the number of attack rolls a unit has, so long as their attack is greater than zero. (veqryn)

* Abstracted Heavy Bombers technology. (veqryn)

* Changed History Writer setRenderData to be part of a new event, instead of being a separate method. Also fixed some display issues with event and child messages. (veqryn)

* Created new techAbilityAttachment, "airborneTargettedByAA", which is set by the attacker, controlling which airborne units are subject to AA gun fire and by what AA gun types. (veqryn)

* Fixing error message for when a game xml is not correctly formed. Also preventing errors from being thrown until we check the version number. (veqryn)

* Deleted "GivesPUsDelegate". (veqryn)
